apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
uint64_t uniffi_ant_ffi_fn_method_client_data_get(void*_Nonnull ptr, void*_Nonnull data_map
);
uint64_t uniffi_ant_ffi_fn_method_client_data_get_public(void*_Nonnull ptr, RustBuffer address_hex
);
uint64_t uniffi_ant_ffi_fn_method_client_data_put(void*_Nonnull ptr, RustBuffer data, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_data_put_public(void*_Nonnull ptr, RustBuffer data, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_data_stream(void*_Nonnull ptr, void*_Nonnull data_map
);
uint64_t uniffi_ant_ffi_fn_method_client_data_stream_public(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_ant_ffi_fn_method_client_dir_content_upload(void*_Nonnull ptr, RustBuffer path, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_dir_download(void*_Nonnull ptr, void*_Nonnull data_map, RustBuffer path
);
uint64_t uniffi_ant_ffi_fn_method_client_dir_download_public(void*_Nonnull ptr, void*_Nonnull address, RustBuffer path
);
uint64_t uniffi_ant_ffi_fn_method_client_dir_upload(void*_Nonnull ptr, RustBuffer path, void*_Nonnull wallet
);
uint64_t uniffi_ant_ffi_fn_method_client_dir_upload_public(void*_Nonnull ptr, RustBuffer path, void*_Nonnull wallet
);
uint64_t uniffi_ant_ffi_fn_method_client_file_cost(void*_Nonnull ptr, RustBuffer path, int8_t follow_symlinks, int8_t include_hidden
);
uint64_t uniffi_ant_ffi_fn_method_client_file_download(void*_Nonnull ptr, void*_Nonnull data_map, RustBuffer path
);
uint64_t uniffi_ant_ffi_fn_method_client_file_download_public(void*_Nonnull ptr, void*_Nonnull address, RustBuffer path
);
uint64_t uniffi_ant_ffi_fn_method_client_file_upload(void*_Nonnull ptr, RustBuffer path, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_file_upload_public(void*_Nonnull ptr, RustBuffer path, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_graph_entry_check_existence(void*_Nonnull ptr, void*_Nonnull addr
);