dart/ant_ffi/lib/src/native/bindings.dart


  int uniffi_ant_ffi_fn_method_client_data_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> data_map,
  ) {
    return _uniffi_ant_ffi_fn_method_client_data_get(
      ptr,
      data_map,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_data_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_data_get');
  late final _uniffi_ant_ffi_fn_method_client_data_get =
      _uniffi_ant_ffi_fn_method_client_data_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_data_get_public(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer address_hex,
  ) {
    return _uniffi_ant_ffi_fn_method_client_data_get_public(
      ptr,
      address_hex,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_data_get_publicPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_data_get_public');
  late final _uniffi_ant_ffi_fn_method_client_data_get_public =
      _uniffi_ant_ffi_fn_method_client_data_get_publicPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_data_put(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer data,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_data_put(
      ptr,
      data,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_data_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_data_put');
  late final _uniffi_ant_ffi_fn_method_client_data_put =
      _uniffi_ant_ffi_fn_method_client_data_putPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_data_put_public(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer data,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_data_put_public(
      ptr,
      data,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_data_put_publicPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_data_put_public');
  late final _uniffi_ant_ffi_fn_method_client_data_put_public =
      _uniffi_ant_ffi_fn_method_client_data_put_publicPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_data_stream(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> data_map,
  ) {
    return _uniffi_ant_ffi_fn_method_client_data_stream(
      ptr,
      data_map,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_data_streamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_data_stream');
  late final _uniffi_ant_ffi_fn_method_client_data_stream =
      _uniffi_ant_ffi_fn_method_client_data_streamPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_data_stream_public(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> address,
  ) {
    return _uniffi_ant_ffi_fn_method_client_data_stream_public(
      ptr,
      address,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_data_stream_publicPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_data_stream_public');
  late final _uniffi_ant_ffi_fn_method_client_data_stream_public =
      _uniffi_ant_ffi_fn_method_client_data_stream_publicPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_dir_content_upload(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer path,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_dir_content_upload(
      ptr,
      path,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_dir_content_uploadPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_dir_content_upload');
  late final _uniffi_ant_ffi_fn_method_client_dir_content_upload =
      _uniffi_ant_ffi_fn_method_client_dir_content_uploadPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_dir_download(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> data_map,
    RustBuffer path,
  ) {
    return _uniffi_ant_ffi_fn_method_client_dir_download(
      ptr,
      data_map,
      path,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_dir_downloadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_dir_download');
  late final _uniffi_ant_ffi_fn_method_client_dir_download =
      _uniffi_ant_ffi_fn_method_client_dir_downloadPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_dir_download_public(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> address,
    RustBuffer path,
  ) {
    return _uniffi_ant_ffi_fn_method_client_dir_download_public(
      ptr,
      address,
      path,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_dir_download_publicPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_dir_download_public');
  late final _uniffi_ant_ffi_fn_method_client_dir_download_public =
      _uniffi_ant_ffi_fn_method_client_dir_download_publicPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_dir_upload(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer path,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_dir_upload(
      ptr,
      path,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_dir_uploadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_dir_upload');
  late final _uniffi_ant_ffi_fn_method_client_dir_upload =
      _uniffi_ant_ffi_fn_method_client_dir_uploadPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_dir_upload_public(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer path,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_dir_upload_public(
      ptr,
      path,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_dir_upload_publicPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_dir_upload_public');
  late final _uniffi_ant_ffi_fn_method_client_dir_upload_public =
      _uniffi_ant_ffi_fn_method_client_dir_upload_publicPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_file_cost(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer path,
  ) {
    return _uniffi_ant_ffi_fn_method_client_file_cost(
      ptr,
      path,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_file_costPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_file_cost');
  late final _uniffi_ant_ffi_fn_method_client_file_cost =
      _uniffi_ant_ffi_fn_method_client_file_costPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_file_download(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> data_map,
    RustBuffer path,
  ) {
    return _uniffi_ant_ffi_fn_method_client_file_download(
      ptr,
      data_map,
      path,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_file_downloadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_file_download');
  late final _uniffi_ant_ffi_fn_method_client_file_download =
      _uniffi_ant_ffi_fn_method_client_file_downloadPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_file_download_public(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> address,
    RustBuffer path,
  ) {
    return _uniffi_ant_ffi_fn_method_client_file_download_public(
      ptr,
      address,
      path,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_file_download_publicPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_file_download_public');
  late final _uniffi_ant_ffi_fn_method_client_file_download_public =
      _uniffi_ant_ffi_fn_method_client_file_download_publicPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_file_upload(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer path,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_file_upload(
      ptr,
      path,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_file_uploadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_file_upload');
  late final _uniffi_ant_ffi_fn_method_client_file_upload =
      _uniffi_ant_ffi_fn_method_client_file_uploadPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_file_upload_public(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer path,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_file_upload_public(
      ptr,
      path,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_file_upload_publicPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_file_upload_public');
  late final _uniffi_ant_ffi_fn_method_client_file_upload_public =
      _uniffi_ant_ffi_fn_method_client_file_upload_publicPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_graph_entry_check_existence(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_graph_entry_check_existence(
      ptr,
      addr,
    );
  }
